--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -249,19 +249,20 @@
                     <span class="bg-danger" ng-show="createAppForm.publicUrl.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
                 </div>
 
-                <label>Emails</label>
+                <label>Emails (fields can be empty)</label>
                 <div class="row form-group" data-ng-repeat = "mail in emailFields">
-                  <a ng-show="showNewMailField(mail)" ng-click="addMailField()" class="btn btn-info"><span class="glyphicon glyphicon-plus-sign"></span></a>
-                  <a ng-show="showNewMailField(mail)" ng-click="removeMailField()" class="btn btn-info"><span class="glyphicon glyphicon-minus-sign"></span></a>
-                  <div class="col-xs-2">
 
-                  <input type="text"
+                  <div class="col-xs-4">
+
+                  <input type="email"
                          ng-model="mail.name"
                          name=""
-                         placeholder="Enter email-adress"
+                         placeholder="Enter email address"
                          class = "form-control">
 
                 </div>
+                  <a ng-show="showNewMailField(mail)" ng-click="addMailField()" class="btn btn-info"><span class="glyphicon glyphicon-plus-sign"></span></a>
+                  <a ng-show="showNewMailField(mail)" ng-click="removeMailField()" class="btn btn-info"><span class="glyphicon glyphicon-minus-sign"></span></a>
               </div>
                 <div class="form-group">
                     <label for="inAppCheckPath2">Check path</label>
@@ -398,13 +399,28 @@
             <span class="bg-danger" ng-show="editAppForm.publicUrl.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
           </div>
 
-          <div class="form-group"
+          <!--<div class="form-group"
                ng-class="{'has-error': editAppForm.emails.$invalid && editAppForm.emails.$dirty}">
             <label for="inAppEmailsUpdate">Emails (for notification). Separate by ,</label>
             <input type="text" ng-model="updateApp.emails" class="form-control " id="inAppEmailsUpdate"
                    name="emails"
                    required
                    placeholder="Enter email(s)">
+          </div>-->
+
+          <label>Emails (fields can be empty)</label>
+          <div class="row form-group" data-ng-repeat = "mail in updateEmails">
+
+            <div class="col-xs-4">
+
+              <input type="email"
+                     ng-model="mail.name"
+                     name=""
+                     class = "form-control">
+
+            </div>
+            <a ng-show="showNewMailFieldForUpdate(mail)" ng-click="addMailFieldForUpdate()" class="btn btn-info"><span class="glyphicon glyphicon-plus-sign"></span></a>
+            <a ng-show="showNewMailFieldForUpdate(mail)" ng-click="removeMailFieldForUpdate()" class="btn btn-info"><span class="glyphicon glyphicon-minus-sign"></span></a>
           </div>
 
           <div class="form-group"
