--- a/gateway-app/src/main/resources/web/gateway/app.html
+++ b/gateway-app/src/main/resources/web/gateway/app.html
@@ -342,13 +342,18 @@
             <span class="bg-danger" ng-show="editAppForm.publicUrl.$error.pattern">Invalid path: Must start with / followed by a letter. Cannot contain white-spaces</span>
           </div>
 
-          <div class="form-group"
-               ng-class="{'has-error': editAppForm.emails.$invalid && editAppForm.emails.$dirty}">
-            <label for="inAppEmails">Emails (for notification). Separate by ,</label>
-            <input type="text" ng-model="newApp.emails" class="form-control " id="inAppEmails" name="emails"
-                   required
-                   placeholder="Enter email(s)">
+          <label>Emails (fields can be empty)</label>
+          <div class="row form-group" data-ng-repeat = "mail in updateEmails">
+            <div class="col-xs-4">
+              <input type="email"
+                     ng-model="mail.name"
+                     name=""
+                     class = "form-control">
+            </div>
+            <a ng-show="showNewMailFieldForUpdate(mail)" ng-click="addMailFieldForUpdate()" class="btn btn-info"><span class="glyphicon glyphicon-plus-sign"></span></a>
+            <a ng-show="showNewMailFieldForUpdate(mail)" ng-click="removeMailFieldForUpdate()" class="btn btn-info"><span class="glyphicon glyphicon-minus-sign"></span></a>
           </div>
+
 
           <div class="form-group"
                ng-class="{'has-error': editAppForm.checkPath.$invalid && editAppForm.checkPath.$dirty}">
