--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -129,8 +129,7 @@
         <div class="row">
 
 
-
-          <div class="col-md-4" ng-repeat="appInst in app.applicationInstances">
+          <div class="col-md-4" ng-repeat="appInst in app.applicationInstances" style="margin-bottom: 15px">
             <div class="panel panel-warning">
               <div class="panel-heading">
                 {{appInst.name}}
@@ -154,12 +153,14 @@
           </div>
 
           <div class="col-md-4">
-            <div class="panel panel-warning">
-              <div class="panel-heading">New application instance</div>
+
+              <button class="btn btn-warning" ng-hide="showAppInstForm" ng-click="showAppInstForm = !showAppInstForm"><span class="glyphicon glyphicon-plus"></span> New server</button>
+            <div class="panel panel-warning" ng-show="showAppInstForm">
+              <div class="panel-heading">New application instance <span class="close" ng-click="showAppInstForm = !showAppInstForm">×</span></div>
               <div class="panel-body">
                 <form class="form" role="form" ng-submit="addAppInst(app)">
                   <div class="form-group">
-                    <input type="text" ng-model="newAppInstForm.name"
+                    <input type="text" ng-model="app.newAppInstForm.name"
                            class="form-control "
                            id="inAppInstName" name="name"
                            required
@@ -167,7 +168,7 @@
                   </div>
                   <div class="form-group">
                     <label for="inAppInstHost">Server </label>
-                    <input type="text" ng-model="newAppInstForm.host"
+                    <input type="text" ng-model="app.newAppInstForm.host"
                            class="form-control "
                            id="inAppInstHost" name="host"
                            required
@@ -472,8 +473,8 @@
                 <h3>Current rules</h3>
 
                 <div class="list-group">
-
-                    <div  class="list-group-item" ng-repeat="rule in updateApp.headerRules">
+                    <span ng-show="updateApp.headerRules.length==0">No rules</span>
+                    <div class="list-group-item" ng-repeat="rule in updateApp.headerRules">
                         {{rule.name}} = {{rule.prefixMatch}}
                         <button type="button" ng-click="removeRuleFromApp(updateApp, rule)" class="btn btn-danger btn-sm pull-right">Remove
                         </button>
@@ -492,7 +493,7 @@
                                required placeholder="Enter name"/>
                     </div>
                     <div class="form-group" >
-                        <label for="inRuleName">Prefix match</label>
+                        <label for="inRuleName">Regex match</label>
                         <input type="text" ng-model="inRule.prefixMatch" class="form-control" id="inRuleMatch"
                                name="name"
                                required placeholder="Enter match"
