New icon with tooltip explains working directory (former installation path) for a load balancer + fixed some labels for input fields

--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -487,13 +487,13 @@
                 <form role="form" ng-submit="updateApplicationRules()" name="createRuleForm" >
 
                     <div class="form-group" >
-                        <label for="inRuleName">Headername</label>
+                        <label for="inRuleName">Header name</label>
                         <input type="text" ng-model="inRule.name" class="form-control" id="inRuleName"
                                name="name"
                                required placeholder="Enter name"/>
                     </div>
                     <div class="form-group" >
-                        <label for="inRuleName">Regex match</label>
+                        <label for="inRuleMatch">Regex match</label>
                         <input type="text" ng-model="inRule.prefixMatch" class="form-control" id="inRuleMatch"
                                name="name"
                                required placeholder="Enter match"
