--- a/gateway-app/src/main/resources/web/gateway/gateway.html
+++ b/gateway-app/src/main/resources/web/gateway/gateway.html
@@ -1,37 +1,3 @@
-<!--<div class="row">
-  <ul ui-sortable="sortableOptionsA" class="list items-container" ng-model="yourObjects">
-       <li class="item sortable"  ng-repeat="item in yourObjects">{{item.name}}</li>
-   </ul>
-
-
-   <h2>One sortable list</h2>
-   <ul ui-sortable="sortableOptionsA" ng-model="allAppGroups[0].applications">
-       <li ng-repeat="item in allAppGroups[0].applications">{{item.name}}</li>
-   </ul>
-
-   <div class="panel-group" id="accordion" ui-sortable="sortableOptionsA" ng-model="allAppGroups[0].applications">
-       <div class="panel panel-default"  ng-repeat="item in allAppGroups[0].applications">
-           <div class="panel-heading">
-               <h4 class="panel-title">
-                   <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-
-                   </a>
-                   {{item.name}}
-               </h4>
-           </div>
-           <div id="collapseOne" class="panel-collapse collapse in">
-               <div class="panel-body">
-                   Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-               </div>
-           </div>
-       </div>
-
-
-   </div>
-
-
-</div>
--->
 <div class="row">
 
 
@@ -69,7 +35,7 @@
                  id="inAppGroupPort"
                  min = "1024"
                  max = "64999"
-                 placeholder="Enter application group port - range 1024 - 64999"
+                 placeholder="Enter application group port: range 1024 - 64999"
                  integer required >
             <span class="bg-danger" ng-show="createAppGroupForm.port.$error.integer">This is not valid integer!</span>
             <span class="bg-danger" ng-show="createAppGroupForm.port.$error.min">  The value must be larger than 1024!</span>
@@ -86,15 +52,18 @@
 
 <div class="panel panel-default">
   <div class="panel-body">
-  <div class="row">
-    <div class="col-sm-6">
-      Port: {{appGroup.port}}
+    <div class="row">
+      <div class="col-sm-6">
+        Port: {{appGroup.port}}
       </div>
-    <div class="col-sm-6">
-    <div class="pull-right ">
-        <span class="badge" title="Number of instances in this application">{{appGroup.applications.length}}</span>
-      <a><span ng-click="showDeleteAppGroupWarning(appGroup)" class="glyphicon glyphicon-trash"></span></a>
-    </div>
+      <div class="col-sm-6">
+        <h4 class="panel-title">
+          <div class="pull-right ">
+            <span class="badge" title="Number of instances in this application">{{appGroup.applications.length}}</span>
+            <a><span ng-click="showUpdateApplicationGroup(appGroup)" class="glyphicon glyphicon-pencil" title="Edit application group"></span></a>
+            <a><span ng-click="showDeleteAppGroupWarning(appGroup)" class="glyphicon glyphicon-trash" title="Remove application group"></span></a>
+          </div>
+        </h4>
       </div>
     </div>
   </div>
@@ -111,10 +80,7 @@
 
       <span class=" pull-right ">
         <span class="badge" title="Number of instances in this application">{{app.applicationInstances.length}}</span>
-
-
-          <a> <span ng-click="showUpdateApplicationRules(app)" class="glyphicon glyphicon-edit" title="Edit header rules"></span></a>
-
+        <a> <span ng-click="showUpdateApplicationRules(app)" class="glyphicon glyphicon-edit" title="Edit header rules"></span></a>
         <a> <span ng-click="showUpdateApplication(app)" class="glyphicon glyphicon-pencil" title="Edit application"> </span></a>
         <a> <span ng-click="showDeleteAppWarning(app, appGroup)" class="glyphicon glyphicon-trash" title="Remove application"> </span></a>
         <a ng-href="#/app/{{app.id}}"> <span class="glyphicon glyphicon-chevron-right" title="Go to detail page"> </span></a>
@@ -138,9 +104,6 @@
                        ng-click="setToBackup(appInst)">{{appInst.backup && 'Backup' || 'Primary'}}</a>
                   <a> <span ng-click="showDeleteAppInstWarning(app,appInst)" class="glyphicon glyphicon-trash"></span></a>
                   <a ng-href="#/appInst/{{appInst.id}}"><span class="glyphicon glyphicon-chevron-right"></span></a>
-                  <!--
-                  <div click-to-edit="appInst.server" save-function="updateAppInst(appInst)"></div>
-                  -->
                 </div>
               </div>
               <div class="panel-body">
@@ -201,8 +164,7 @@
         </div>
 
       <span class="pull-right">
-        <strong>Emails:</strong> {{app.emails}} , <strong>Check path:</strong>
-        {{app.checkPath}}
+        <strong>Check path:</strong> {{app.checkPath}}
       </span>
       </div>
     </div>
@@ -371,6 +333,54 @@
         <button type="button" class="btn btn-danger" data-dismiss="modal">
           Cancel
         </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal update Application Group appGroup) -->
+<div class="modal fade" id="modalUpdateAppGroup" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
+            class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Update</h4>
+      </div>
+
+      <div class="modal-body">
+        <form role="form" ng-submit="updateApplicationGroup()" name="editAppGroupForm">
+
+          <div class="form-group"
+               ng-class="{'has-error': editAppGroupForm.name.$invalid && editAppGroupForm.name.$dirty}">
+            <label for="inAppGroupNameUpdate">Name</label>
+            <input type="text" ng-model="updateAppGroup.name" class="form-control" id="inAppGroupNameUpdate"
+                   name="name"
+                   ng-pattern="/^\S+$/" required placeholder="Enter name"/>
+            <span class="bg-danger" ng-show="editAppGroupForm.name.$error.pattern">Invalid name: Cannot contain white-spaces. Use - instead</span>
+          </div>
+
+          <div class="form-group"
+               ng-class="{'has-error': editAppGroupForm.port.$invalid && editAppGroupForm.port.$dirty}">
+            <label for="inAppGroupPortUpdate">Port</label>
+            <input type="number" ng-model="updateAppGroup.port" class="form-control "
+                   id="inAppGroupPortUpdate"
+                   name="port"
+                   min = "1024"
+                   max = "64999"
+                   placeholder="Enter application group port: range 1024 - 64999"
+                   integer required >
+            <span class="bg-danger" ng-show="createAppGroupForm.port.$error.integer">This is not valid integer!</span>
+            <span class="bg-danger" ng-show="createAppGroupForm.port.$error.min">  The value must be larger than 1024!</span>
+            <span class="bg-danger" ng-show="createAppGroupForm.port.$error.max">  The value must be smaller than 65000!</span>
+          </div>
+
+          <button type="submit" class="btn btn-primary" ng-disabled="editAppGroupForm.$invalid">Update</button>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
